<resources>
    <!-- Start Screen -->
    <string name="start_headline">GeoQuiz</string>
    <string name="btn_start">Start!</string>

    <!-- Player Setup -->
    <string name="setup_headline">GeoQuiz - Location</string>
    <string name="setup_name_label">Name</string>
    <string name="setup_name_hint">Your Name</string>
    <string name="btn_show_location">Play!</string>

    <!-- Quiz -->
    <string name="app_name">GeoQuiz</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="btn_next">Next</string>
    <string name="btn_show_on_map">Show on Map</string>
    <string name="btn_cheat">Cheat</string>
    <string name="question_placeholder">This is an amazingly tricky question! Do you know the answer?</string>
    <string name="correctAnswer">Correct :)</string>
    <string name="wrongAnswer">Wrong :(</string>

    <!-- Cheating -->
    <string name="cheat_warning_text">Are you sure you want to cheat?</string>
    <string name="btn_yes_cheat">Yes, show answer!</string>
    <string name="btn_phone_a_friend">Yes, phone-a-friend!</string>
    <string name="btn_no_cheat">No, go back.</string>
    <string name="judgement_toast">It\'s your life ¯\_(ツ)_/¯</string>
    <string name="cheat_answer_hint">Answer</string>

    <!-- Questions -->
    <string name="q_Alaska">Alaska is both the westernmost and easternmost state in America.</string>
    <string name="q_Antarctica">Antarctica is the largest desert in the world.</string>
    <string name="q_Russia">Russia has 11 time zones.</string>
    <string name="q_MtChimborazo">Mount Chimborazo is the highest point on Earth, but not the world\'s tallest mountain</string>
    <string name="q_Africa">Africa is the only continent that lies in all four hemispheres</string>
    <string name="title_activity_show_map">ShowMap</string>
</resources>